--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,7 +34,8 @@
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -287,137 +288,134 @@
                         android:textColor="@color/orange"
                         android:textSize="@dimen/_12dp" />
 
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5dp"
+                android:orientation="horizontal">
+
+                <android.support.design.card.MaterialCardView
+                    android:id="@+id/profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardElevation="@dimen/_3dp"
+                    app:cardUseCompatPadding="true">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5dp"
-                        android:orientation="horizontal">
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5dp">
 
-                        <android.support.design.card.MaterialCardView
-                            android:id="@+id/profile"
+                        <com.kredivation.aakhale.components.CircleImageView
+                            android:layout_width="@dimen/_25dp"
+                            android:layout_height="@dimen/_25dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_uuuser" />
+
+
+                        <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            app:cardCornerRadius="@dimen/_5dp"
-                            app:cardElevation="@dimen/_3dp"
-                            app:cardUseCompatPadding="true">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:padding="@dimen/_5dp">
-
-                                <com.kredivation.aakhale.components.CircleImageView
-                                    android:layout_width="@dimen/_25dp"
-                                    android:layout_height="@dimen/_25dp"
-                                    android:layout_gravity="center"
-                                    android:src="@drawable/ic_uuuser" />
-
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:gravity="center"
-                                    android:text="My Profile"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/orange"
-                                    android:textSize="@dimen/_10dp"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-
-                        </android.support.design.card.MaterialCardView>
-
-
-                        <android.support.design.card.MaterialCardView
-                            android:id="@+id/setting"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            app:cardCornerRadius="@dimen/_5dp"
-                            app:cardElevation="@dimen/_3dp"
-                            app:cardUseCompatPadding="true">
-
-                            <LinearLayout
-                                android:id="@+id/Setting"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:orientation="vertical"
-                                android:padding="@dimen/_5dp">
-
-                                <com.kredivation.aakhale.components.CircleImageView
-                                    android:layout_width="@dimen/_25dp"
-                                    android:layout_height="@dimen/_25dp"
-                                    android:layout_gravity="center"
-                                    android:src="@drawable/ic_gear" />
-
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:gravity="center"
-                                    android:text="Setting"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/orange"
-                                    android:textSize="@dimen/_10dp"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-                        </android.support.design.card.MaterialCardView>
-
-                        <android.support.design.card.MaterialCardView
-                            android:id="@+id/logout"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@color/light_grey"
-                            app:cardCornerRadius="@dimen/_5dp"
-                            app:cardElevation="@dimen/_3dp"
-                            app:cardUseCompatPadding="true">
-
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:padding="@dimen/_5dp">
-
-                                <com.kredivation.aakhale.components.CircleImageView
-                                    android:layout_width="@dimen/_25dp"
-                                    android:layout_height="@dimen/_25dp"
-                                    android:layout_gravity="center"
-                                    android:src="@drawable/ic_logooout" />
-
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:gravity="center"
-                                    android:text="Log Out"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/orange"
-                                    android:textSize="@dimen/_10dp"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-                        </android.support.design.card.MaterialCardView>
-
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="My Profile"
+                            android:textAlignment="center"
+                            android:textColor="@color/orange"
+                            android:textSize="@dimen/_10dp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
 
-                </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+                </android.support.design.card.MaterialCardView>
 
+
+                <android.support.design.card.MaterialCardView
+                    android:id="@+id/setting"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardElevation="@dimen/_3dp"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:id="@+id/Setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5dp">
+
+                        <com.kredivation.aakhale.components.CircleImageView
+                            android:layout_width="@dimen/_25dp"
+                            android:layout_height="@dimen/_25dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_gear" />
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Setting"
+                            android:textAlignment="center"
+                            android:textColor="@color/orange"
+                            android:textSize="@dimen/_10dp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </android.support.design.card.MaterialCardView>
+
+                <android.support.design.card.MaterialCardView
+                    android:id="@+id/logout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/light_grey"
+                    app:cardCornerRadius="@dimen/_5dp"
+                    app:cardElevation="@dimen/_3dp"
+                    app:cardUseCompatPadding="true">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5dp">
+
+                        <com.kredivation.aakhale.components.CircleImageView
+                            android:layout_width="@dimen/_25dp"
+                            android:layout_height="@dimen/_25dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_logooout" />
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="Log Out"
+                            android:textAlignment="center"
+                            android:textColor="@color/orange"
+                            android:textSize="@dimen/_10dp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </android.support.design.card.MaterialCardView>
+
+
+            </LinearLayout>
         </LinearLayout>
 
 
