--- a/app/src/main/res/layout/fragment_tournament_details.xml
+++ b/app/src/main/res/layout/fragment_tournament_details.xml
@@ -1,15 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/_8dp"
     android:orientation="vertical"
-    tools:context=".fragments.TournamentDetails">
+    tools:context=".activity.TournamentDetails">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"
+        android:visibility="visible">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/back"
+                    android:layout_width="@dimen/_40dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_20dp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/_35dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Tournament Detail"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_16dp" />
+
+
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_8dp"
         android:layout_weight="1">
 
         <LinearLayout
@@ -21,15 +68,16 @@
             <ImageView
                 android:id="@+id/displayImage"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_130dp" />
+                android:layout_height="@dimen/_130dp"
+                android:scaleType="fitXY" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_10dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="@dimen/_5dp"
                 android:weightSum="1">
 
                 <TextView
@@ -37,21 +85,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_4dp"
+                    android:text=""
+                    android:textColor="@color/orange"
                     android:textSize="@dimen/_12dp" />
 
 
                 <TextView
                     android:id="@+id/status"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/_80dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/_5dp"
                     android:background="@drawable/round_boder"
                     android:padding="@dimen/_5dp"
-                    android:text="Name"
+                    android:text=""
                     android:textAlignment="center"
-                    android:textColor="@color/green" />
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_12dp" />
 
 
             </RelativeLayout>
@@ -61,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_4dp"
+                android:text=""
                 android:textSize="@dimen/_12dp" />
 
             <TextView
@@ -72,15 +123,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5dp"
+                android:layout_marginTop="@dimen/_10dp"
                 android:background="@drawable/round_boder"
-                android:orientation="vertical">
+                android:orientation="vertical"
+              >
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/gray2"
                     android:text="About Tournament"
+                    android:padding="@dimen/_5dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
@@ -90,7 +144,7 @@
                     android:id="@+id/aboutTournament"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="5"
+                    android:layout_marginTop="@dimen/_5dp"
                     android:textSize="@dimen/_12dp" />
 
 
@@ -99,7 +153,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5dp"
+                android:layout_marginTop="@dimen/_8dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -229,7 +283,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight=".7"
                         android:padding="@dimen/_5dp"
-                        android:text="Venue:" />
+                        android:text="" />
                 </LinearLayout>
 
                 <LinearLayout
