--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -4,9 +4,9 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="@dimen/_50dp"
     app:cardCornerRadius="@dimen/_5dp"
     app:cardElevation="@dimen/_5dp"
-    android:minHeight="@dimen/_50dp"
     app:cardUseCompatPadding="true">
 
 
@@ -14,8 +14,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/_5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/_5dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight=".2"
-            android:src="@drawable/tropy1" />
+            android:src="@drawable/noimage" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -36,15 +36,24 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1 June 2018,04:09 PM"
+                android:text=""
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/userId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:paddingBottom="@dimen/_5dp"
+                android:paddingTop="@dimen/_5dp"
+                android:textSize="@dimen/_12dp" />
 
             <TextView
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FRIDAY"
+                android:text=""
                 android:textSize="@dimen/_12dp" />
 
 
@@ -52,7 +61,7 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Delhi INDIA"
+                android:text=""
                 android:textSize="@dimen/_12dp" />
 
         </LinearLayout>
